# ResumATE

./: NEW_PROFILE_PAGE_INFO.md  README.md  REFACTORING_SUMMARY.md  package-lock.json
SQL_scripts/: allow_unauthenticated_uploads_to_bucket.sql  create_job_table.sql  create_skills_table.sql  create_user_uploaded_pdfs_table.sql
SQL_scripts/hybrid_schema/: 00_create_all_tables.sql  00_create_all_tables_v2_CLEAR_NAMING.sql  01_create_resume_items_table.sql  02_create_resume_item_points_table.sql  03_create_master_resumes_table.sql  04_create_master_resume_items_junction.sql  05_create_jobs_table.sql  06_create_curated_resumes_table.sql  07_create_curated_resume_items_junction.sql  08_create_curated_resume_item_points.sql
backend/: package-lock.json  package.json  server.js
backend/config/: passport.js
backend/controllers/: auth.controller.js  curatedResumes.controller.js  education.controller.js  resume.controller.js  (+3 more)
backend_python/: Dockerfile  README.md  main.py  pyproject.toml
backend_python/SQL_scripts/: create_education_table.sql  create_generated_pdfs_table.sql  create_pdf_uploads_bucket.sql  create_resume_items_table.sql  create_resumes_table.sql  create_user_table.sql
backend_python/app/: Dockerfile  main.py  models.py
backend_python/app/config/: settings.py
backend_python/app/database/: supabase.py
backend_python/app/routes/: health.py  resume.py  root.py  test_ai.py
backend_python/app/services/: ai_service.py  client.py  feedback_service.py  pointer_service.py  test_ai_service.py
frontend/: package-lock.json  package.json  vite.config.js
(+61 files in other folders)
